# anchor-airdrop-program

./: Anchor.toml  README.md  package-lock.json  package.json
programs/airdrop-program/: Cargo.toml
programs/airdrop-program/src/: lib.rs
tests/: airdrop-program.ts
