[package]
name = "airdrop-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "airdrop_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "~1.14.16"
anchor-lang = { version = "0.27.0", features = [ "init-if-needed" ] }
anchor-spl = "0.27.0"
winnow = "=0.4.1"